[workspace]
members = [
    "crates/held-karp-core",
    "crates/held-karp-py",
]
resolver = "2"

[workspace.package]
version = "0.1.1" # x-release-please-version
edition = "2021"
license = "MIT"
repository = "https://github.com/TheUncharted/held-karp"

[workspace.dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
