[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "held-karp"
version = "0.1.0" # x-release-please-version
description = "Exact TSP solver using the Held-Karp bitmask DP algorithm — Rust-powered Python bindings"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [{name = "Uncharted"}]
keywords = ["tsp", "held-karp", "optimization", "travelling-salesman", "combinatorics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/TheUncharted/held-karp"
Repository = "https://github.com/TheUncharted/held-karp"
Issues = "https://github.com/TheUncharted/held-karp/issues"
Documentation = "https://github.com/TheUncharted/held-karp#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
